@@ -16,6 +16,14 @@
 
 2006-01-16  Aaron Bockover  <aaron@aaronbock.net>
 
+	* data/Makefile.am: Install D-Bus service file in 
+	$(datadir)/dbus-1/services (BGO #327046)
+
+	* src/Banshee.Plugins/Audioscrobbler/Engine.cs (TransmitQueue): Guard 
+	against a potential nullref (BGO #326863)
+
+2006-01-16  Aaron Bockover  <aaron@aaronbock.net>
+
 	* src/PlayerInterface.cs: Add the global actions accelerator group to
 	the main window (BGO #326923)
 	
